--- a/src/styles.css
+++ b/src/styles.css
@@ -707,6 +707,7 @@ footer .reach-out {
 
   .contact-form-container {
     margin: 50px 0;
+    margin-left: 0px;
   }
 
   .contact-form-container form {
